Book file generation worker, improvements to logic and async operations